исправляет ошибки по разметке svg

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       </section>
 
       <!--Tasks section-->
-      <section class="section">
+      <section class="section task">
         <div class="container">
           <h2 class="section-title-tasks">Задачи организации</h2>
           <ul class="tasks list">
@@ -124,7 +124,7 @@
 
       <!--Team section-->
       <section class="section teams">
-        <div class="container">
+        <div class="container te">
           <h2 class="section-title team">Наша команда</h2>
 
           <ul class="team list">
@@ -132,85 +132,142 @@
               <img src="images/Демьяненко.jpg" alt="man" width="270" />
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text">Product Designer</p>
-              <div class="icon-item">
-                <a href="" class="team-link">
-                  <svg class="icon-team instagram" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+
+              <ul class="list team-link">
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team instagram" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team twitter" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team facebook" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team linkedin" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item card">
               <img src="images/Репина.jpg" alt="woman" width="270" />
               <h3 class="title">Ольга Репина</h3>
               <p class="text">Frontend Developer</p>
-              <div class="icon-item">
-                <a href="" class="team-link">
-                  <svg class="icon-team instagram" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="list team-link">
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team instagram" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team twitter" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team facebook" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team linkedin" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item card">
               <img src="images/Тарасов.jpg" alt="man" width="270" />
               <h3 class="title">Николай Тарасов</h3>
               <p class="text">Marketing</p>
-              <div class="icon-item">
-                <a href="" class="team-link">
-                  <svg class="icon-team instagram" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="list team-link">
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team instagram" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team twitter" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team facebook" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team linkedin" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="item card">
               <img src="images/Ермаков.jpg" alt="man" width="270" />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text">UI Designer</p>
-              <div class="icon-item">
-                <a href="" class="team-link">
-                  <svg class="icon-team instagram" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-instagram"></use>
-                  </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-twitter"></use>
-                  </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-facebook"></use>
-                  </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
-                    <use href="./images/sprite.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </div>
+              <ul class="list team-link">
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team instagram" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team twitter" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team facebook" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="" class="team-link">
+                    <svg class="icon-team linkedin" width="20" height="20">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -220,39 +277,47 @@
       <section class="section">
         <div class="container">
           <h2 class="section-title">Постоянные клиенты</h2>
-          <ul class="client list">
-            <li class="item-client">
+          <ul class="client list item-client">
+            <li class="icon-client">
               <a href="" class="client-link">
-                <div class="icon-client">
-                  <svg class="group-one" width="41" height="46.7">
-                    <use href="./images/sprite.svg#icon-group"></use>
-                  </svg>
-                </div>
-                <div class="icon-client">
-                  <svg class="group-two" width="40" height="52">
-                    <use href="./images/sprite.svg#icon-group-1"></use>
-                  </svg>
-                </div>
-                <div class="icon-client">
-                  <svg class="group-three" width="43.46" height="41.18">
-                    <use href="./images/sprite.svg#icon-group-2"></use>
-                  </svg>
-                </div>
-                <div class="icon-client">
-                  <svg class="group-four" width="84.44" height="40.62">
-                    <use href="./images/sprite.svg#icon-group-3"></use>
-                  </svg>
-                </div>
-                <div class="icon-client">
-                  <svg class="group-five" width="62.54" height="45.43">
-                    <use href="./images/sprite.svg#icon-group-4"></use>
-                  </svg>
-                </div>
-                <div class="icon-client">
-                  <svg class="group-six" width="93.79" height="43.93">
-                    <use href="./images/sprite.svg#icon-group-5"></use>
-                  </svg>
-                </div>
+                <svg class="group-one" width="41" height="46.7">
+                  <use href="./images/sprite.svg#icon-group"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-client">
+              <a href="" class="client-link">
+                <svg class="group-two" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-group-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-client">
+              <a href="" class="client-link">
+                <svg class="group-three" width="43.46" height="41.18">
+                  <use href="./images/sprite.svg#icon-group-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-client">
+              <a href="" class="client-link">
+                <svg class="group-four" width="146" height="70">
+                  <use href="./images/sprite.svg#icon-group-3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-client">
+              <a href="" class="client-link">
+                <svg class="group-five" width="62.54" height="45.43">
+                  <use href="./images/sprite.svg#icon-group-4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-client">
+              <a href="" class="client-link">
+                <svg class="group-six" width="156" height="80">
+                  <use href="./images/sprite.svg#icon-group-5"></use>
+                </svg>
               </a>
             </li>
           </ul>
@@ -271,19 +336,31 @@
           </div>
           <div class="social-links">
             <h2 class="title-footer">присоединяйтесь</h2>
-            <ul class="list">
-              <li class="item">
+            <ul class="list social-footer">
+              <li class="item social-footer">
                 <a href="" class="client-link">
-                  <svg class="icon-team instagram" width="20" height="20">
+                  <svg class="icon-team instagram-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team twitter-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team facebook-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team linkedin-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
