--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/Технокряк.jpg" alt="Веб-сайт" width="370" />
+                  <img src="images/Технокряк.jpg" alt="Веб-сайт" width="100%" />
                   <div class="names">
                     <h3 class="title">Технокряк</h3>
                     <p class="text">Веб-сайт</p>
@@ -90,7 +90,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/NewOrlean.jpg" alt="Постер" width="370" />
+                  <img src="images/NewOrlean.jpg" alt="Постер" width="100%" />
                   <div class="names">
                     <h3 class="title">Постер New Orlean vs Golden Star</h3>
                     <p class="text">Дизайн</p>
@@ -101,7 +101,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/Seafood.jpg" alt="Приложение" width="370" />
+                  <img src="images/Seafood.jpg" alt="Приложение" width="100%" />
                   <div class="names">
                     <h3 class="title">Ресторан Seafood</h3>
                     <p class="text">Приложение</p>
@@ -112,7 +112,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/Prime.jpg" alt="Маркетинг" width="370" />
+                  <img src="images/Prime.jpg" alt="Маркетинг" width="100%" />
                   <div class="names">
                     <h3 class="title">Проект Prime</h3>
                     <p class="text">Маркетинг</p>
@@ -123,7 +123,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/Boxes.jpg" alt="Приложение" width="370" />
+                  <img src="images/Boxes.jpg" alt="Приложение" width="100%" />
                   <div class="names">
                     <h3 class="title">Проект Boxes</h3>
                     <p class="text">Приложение</p>
@@ -134,7 +134,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/InspirationBorders.jpg" alt="Веб-сайт" width="370" />
+                  <img src="images/InspirationBorders.jpg" alt="Веб-сайт" width="100%" />
                   <div class="names">
                     <h3 class="title">Inspiration has no Borders</h3>
                     <p class="text">Веб-сайт</p>
@@ -145,7 +145,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/LimitedEdition.jpg" alt="Дизайн" width="370" />
+                  <img src="images/LimitedEdition.jpg" alt="Дизайн" width="100%" />
                   <div class="names">
                     <h3 class="title">Издание Limited Edition</h3>
                     <p class="text">Дизайн</p>
@@ -156,7 +156,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/LAB.jpg" alt="Маркетинг" width="370" />
+                  <img src="images/LAB.jpg" alt="Маркетинг" width="100%" />
                   <div class="names">
                     <h3 class="title">Проект LAB</h3>
                     <p class="text">Маркетинг</p>
@@ -167,7 +167,7 @@
             <li class="item">
               <div class="progects-card">
                 <a href="" class="progects-link">
-                  <img src="images/GrowingBusiness.jpg" alt="Приложение" width="370" />
+                  <img src="images/GrowingBusiness.jpg" alt="Приложение" width="100%" />
                   <div class="names">
                     <h3 class="title">Growing Business</h3>
                     <p class="text">Приложение</p>
@@ -191,19 +191,31 @@
           </div>
           <div class="social-links">
             <h2 class="title-footer">присоединяйтесь</h2>
-            <ul class="list">
-              <li class="item">
+            <ul class="list social-footer">
+              <li class="item social-footer">
                 <a href="" class="client-link">
-                  <svg class="icon-team instagram" width="20" height="20">
+                  <svg class="icon-team instagram-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
-                  <svg class="icon-team twitter" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team twitter-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
-                  <svg class="icon-team facebook" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team facebook-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
-                  <svg class="icon-team linkedin" width="20" height="20">
+                </a>
+              </li>
+              <li class="item">
+                <a href="" class="client-link">
+                  <svg class="icon-team linkedin-footer" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
