--- a/portfolio.html
+++ b/portfolio.html
@@ -192,30 +192,30 @@
           <div class="social-links">
             <h2 class="title-footer">присоединяйтесь</h2>
             <ul class="list social-footer">
-              <li class="item social-footer">
-                <a href="" class="client-link">
-                  <svg class="icon-team instagram-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team twitter-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team facebook-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team linkedin-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
