--- a/index.html
+++ b/index.html
@@ -27,27 +27,24 @@
             <li class="item"><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="auth-nav list">
-          <div class="icon-envelope">
-            <li class="item">
-              <a href="" class="link">
-                <svg class="envelope" width="16" height="12">
-                  <use href="./images/sprite.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-          </div>
-          <div class="icon-smartphone">
-            <li class="item">
-              <a href="" class="link">
-                <svg class="smartphone" width="10" height="16">
-                  <use href="./images/sprite.svg#icon-smartphone"></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </div>
+        <ul class="auth-nav list icons-list">
+          <li class="item icons-header">
+            <a href="" class="link icons-header-link">
+              <svg class="icons-svg" width="16" height="12">
+                <use href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
+          </li>
+
+          <li class="item icons-header">
+            <a href="" class="link icons-header-link">
+              <svg class="icons-svg" width="10" height="16">
+                <use href="./images/sprite.svg#icon-smartphone"></use>
+              </svg>
+              +38 096 111 11 11
+            </a>
+          </li>
         </ul>
       </div>
     </header>
@@ -133,31 +130,31 @@
               <h3 class="title">Игорь Демьяненко</h3>
               <p class="text">Product Designer</p>
 
-              <ul class="list team-link">
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team instagram" width="20" height="20">
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team twitter" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team facebook" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team linkedin" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -168,31 +165,31 @@
               <img src="images/Репина.jpg" alt="woman" width="270" />
               <h3 class="title">Ольга Репина</h3>
               <p class="text">Frontend Developer</p>
-              <ul class="list team-link">
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team instagram" width="20" height="20">
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team twitter" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team facebook" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team linkedin" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -203,31 +200,31 @@
               <img src="images/Тарасов.jpg" alt="man" width="270" />
               <h3 class="title">Николай Тарасов</h3>
               <p class="text">Marketing</p>
-              <ul class="list team-link">
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team instagram" width="20" height="20">
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team twitter" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team facebook" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team linkedin" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -238,31 +235,31 @@
               <img src="images/Ермаков.jpg" alt="man" width="270" />
               <h3 class="title">Михаил Ермаков</h3>
               <p class="text">UI Designer</p>
-              <ul class="list team-link">
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team instagram" width="20" height="20">
+              <ul class="list social-icons">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-instagram"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team twitter" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-twitter"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team facebook" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-facebook"></use>
                     </svg>
                   </a>
                 </li>
-                <li>
-                  <a href="" class="team-link">
-                    <svg class="icon-team linkedin" width="20" height="20">
+                <li class="social-icons-item">
+                  <a href="" class="social-icons-link">
+                    <svg class="social-icons-svg" width="20" height="20">
                       <use href="./images/sprite.svg#icon-linkedin"></use>
                     </svg>
                   </a>
@@ -280,43 +277,43 @@
           <ul class="client list item-client">
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-one" width="41" height="46.7">
-                  <use href="./images/sprite.svg#icon-group"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-two" width="40" height="52">
-                  <use href="./images/sprite.svg#icon-group-1"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-three" width="43.46" height="41.18">
-                  <use href="./images/sprite.svg#icon-group-2"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-four" width="146" height="70">
-                  <use href="./images/sprite.svg#icon-group-3"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-five" width="62.54" height="45.43">
-                  <use href="./images/sprite.svg#icon-group-4"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="icon-client">
               <a href="" class="client-link">
-                <svg class="group-six" width="156" height="80">
-                  <use href="./images/sprite.svg#icon-group-5"></use>
+                <svg class="client-svg" width="106" height="60">
+                  <use href="./images/sprite.svg#icon-Logo-6"></use>
                 </svg>
               </a>
             </li>
@@ -337,30 +334,30 @@
           <div class="social-links">
             <h2 class="title-footer">присоединяйтесь</h2>
             <ul class="list social-footer">
-              <li class="item social-footer">
-                <a href="" class="client-link">
-                  <svg class="icon-team instagram-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team twitter-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team facebook-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
-              <li class="item">
-                <a href="" class="client-link">
-                  <svg class="icon-team linkedin-footer" width="20" height="20">
+              <li class="item social-footer-svg">
+                <a href="" class="social-footer-link">
+                  <svg class="footer-svg" width="20" height="20">
                     <use href="./images/sprite.svg#icon-linkedin"></use>
                   </svg>
                 </a>
